fixing bug where clicking on the dropdown makes the screen shift

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@
   html {
     -webkit-text-size-adjust: 100%;
     overflow-x: hidden;
+    scrollbar-gutter: stable;
   }
 
   body {
